# Field

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DESIGN_SYSTEM_RULES.md  DevNotesSystem.md  FIELD_MASTER_GUIDE.md  FIELD_RULEBOOK.md  FIELD_UI_RULES  README.md  build_all.sh  verify_builds.sh
Source/: CMakeLists.txt  DevNotes.h  FieldLookAndFeel.cpp  FieldLookAndFeel.h  History.h  IconSystem.cpp  IconSystem.h  KnobCell.cpp  KnobCell.h  KnobCellDual.cpp  KnobCellDual.h  KnobCellQuad.cpp  KnobCellQuad.h  Layout.h  PluginEditor.cpp  PluginEditor.cpp.backup  PluginEditor.cpp.main  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetCommandPalette.cpp  PresetManager.cpp  PresetRegistry.cpp  PresetRegistry.h  PresetSystem.cpp  PresetSystem.h
Source/Core/: FieldLookAndFeel.cpp  FieldLookAndFeel.h  IconSystem.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Presets/: PresetCommandPalette.h  PresetManager.h  PresetStore.cpp  PresetStore.h  PresetSystem.h
Source/dsp/: DelayEngine.h  DelayPresetLibrary.h  Ducker.h  PhaseAlignmentEngine.cpp  PhaseAlignmentEngine.h
Source/dynEQ/: DynamicEqParamIDs.h  DynamicEqState.cpp  DynamicEqState.h  FilterFactory.h
Source/motion/: MotionControlsPane.h  MotionEngine.h  MotionIDs.h  MotionPanel.cpp  MotionPanel.h  MotionParams.h  MotionPath.h  MotionTab.h
Source/reverb/: ReverbEngine.cpp  ReverbEngine.h  ReverbParamIDs.h  ReverbParameters.h
Source/reverb/ui/: DecayCurveComponent.cpp  DecayCurveComponent.h  ReverbCanvasComponent.cpp  ReverbCanvasComponent.h  ReverbControlsPane2x16.h  ReverbControlsPanel.h  ReverbDynEQPane.h  ReverbEQComponent.cpp  ReverbEQComponent.h  ReverbPanel.cpp  ReverbPanel.h  ReverbScopeComponent.cpp  ReverbScopeComponent.h  ReverbTab.h
Source/ui/: BandControlsPane.h  BandPane.h  BandTab.h  BandVisualPane.cpp  BandVisualPane.h  ControlFactory.cpp  ControlFactory.h  Design.h  DynEqTab.h  DynEqZoomSideRail.h  ImagerControlsPane.h  ImagerPane.h  ImagerTab.h  Layout.h  PaneManager.h  PhaseTab.cpp  PhaseTab.h  ProcessedSpectrumPane.h  SimpleSwitchCell.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StereoFieldEngine.cpp  XYControlsPane.h  XYTab.h  ZoomControl.h  ZoomState.h
Source/ui/Components/: KnobCell.cpp  KnobCellDual.cpp  KnobCellMini.h  KnobCellQuad.h  KnobCellWithAux.cpp  KnobCellWithAux.h
Source/ui/delay/: DelayControlsPane.h  DelayTab.h  DelayUiBridge.h  DelayVisuals.h
Source/ui/machine/: MachineEngine.cpp  MachineEngine.h  MachinePane.cpp  MachinePane.h  ParamPatch.h  ProposalCard.cpp  WidthDesignerPanel.h
Source_backup_20250925_091832/: CMakeLists.txt  IconSystem.cpp  IconSystem.h  KnobCell.cpp  KnobCellQuad.cpp  KnobCellQuad.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PresetRegistry.cpp  PresetSystem.h  PresetTheme.h
Source_backup_20250925_091832/dsp/: DelayPresetLibrary.cpp  PhaseModes.h
Source_backup_20250925_091832/motion/: CreateParameterLayout_Motion.txt  MotionControlsPane.h  MotionEngine.h  MotionIDs.h  MotionPanel.h  MotionVisual.h
Source_backup_20250925_091832/reverb/: ReverbEngine.h  ReverbParamIDs.h  ReverbParameters.h
Source_backup_20250925_091832/reverb/ui/: DecayCurveComponent.cpp  ReverbCanvasComponent.cpp  ReverbControlsPane2x16.h  ReverbEQComponent.cpp  ReverbEQComponent.h  ReverbPanel.h
Source_backup_20250925_091832/ui/: BandControlsPane.h  BandPane.h  ControlGridMetrics.h  ImagerControlsPane.h  ImagerPane.h  MachinePane.h  ProcessedSpectrumPane.h  SpectrumAnalyzer.h  StereoFieldEngine.h  XYControlsPane.h
Source_backup_20250925_091832/ui/delay/: DelayTab.h  DelayVisuals.h
Source_backup_20250925_091832/ui/machine/: MachineHelpersJUCE.h  ProposalCard.h  WidthDesignerPanel.cpp
docs/: BUILD_INSTRUCTIONS.md  DYN_EQ_BUILD_PLAN.md  FIELD_MASTER_GUIDE.md  FIELD_MASTER_TOOLTIP.md  FIELD_METALLIC_SYSTEM.md  FIELD_PHASE_ALIGNMENT.md  FIELD_RULEBOOK.md  FIELD_TO_DO.md  FIELD_UI_RULES  ui_performance_audit.md
docs/notes/: DEC-0002-tabs-driven-ui-migration.md  DYN_EQ_BUILD_PLAN.md  DYN_EQ_TOOLTIPS.md  ui_performance_audit.md
docs/notes/decision/: DEC-0001-phase-modes.md
